--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -13,7 +13,7 @@
 
         <div class="shadow p-3 mb-5 bg-white rounded">
             <nav class="navbar navbar-light">
-        <a class="navbar-brand" href="#" style="color:#ffffff ;font-weight: 950; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Start Bootstrap</a>
+        <a class="navbar-brand" href="#" style="color:#000000">Company name</a>
         <ul class="nav nav-pills ">
           <li class="nav-item">
              <a class="nav-link" href="#" style="color:#000000 ">Features</a>
@@ -29,7 +29,8 @@
           <li class="nav-item">
               <a class="nav-link" href="#" style="color:#000000">Pricing</a>
           </li>
-           < button type="button" class="btn btn-outline-primary">Sign Up</button>
+
+           <button type="button" class="btn btn-outline-primary">Sign Up</button>
         </ul>
       </nav>
                 
