--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -11,8 +11,9 @@
 <body>
     <div class="container-fluid">
 
-        <div class="shadow p-3 mb-5 bg-white rounded">
-            <nav class="navbar navbar-light">
+              
+
+            <nav class="navbar navbar-light bg-light shadow-sm " style="padding: 15px 15px; background-color: #000;">
         <a class="navbar-brand" href="#" style="color:#000000">Company name</a>
         <ul class="nav nav-pills ">
           <li class="nav-item">
@@ -40,12 +41,12 @@
 
         </div>
         <div class="container">
-            <div class="row">
+            <div class="row" style="padding-top:5% ">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
                     <div class="text-center">
                         <h1 class="display-4">Pricing</h1>
-                        <p>Quickly build an effective pricing table for your potential customers with this Bootstrap example.
+                        <p class="text-center">Quickly build an effective pricing table for your potential customers with this Bootstrap example.
                             It's built with default Bootstrap components and utilities with little customization.</p>
                     </div>
                 </div>
