--- a/task3.html
+++ b/task3.html
@@ -26,17 +26,17 @@
         <a class="navbar-brand" href="#" style="color:#ffffff ;font-weight: 950; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Start Bootstrap</a>
         <ul class="nav nav-pills ">
           <li class="nav-item">
-            <a class="nav-link" href="#fat" style="color:#ffffff ; font-size: 12px ;font-weight: bold;">HOME</a>
+            <a class="nav-link" href="https://aswinc97.github.io/aswin.html" style="color:#ffffff ; font-size: 12px ;font-weight: bold;">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#mdo" style="color:#ffffff ; font-size: 12px ;font-weight: bold">ABOUT</a>
+            <a class="nav-link" href="https://mehthabt.github.io/mehthab.html" style="color:#ffffff ; font-size: 12px ;font-weight: bold">ABOUT</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#fat" style="color:#ffffff ; font-size: 12px ;font-weight: bold">SAMPLE POST</a>
+            <a class="nav-link" href="https://fidabasheer.github.io/task3.html" style="color:#ffffff ; font-size: 12px ;font-weight: bold">SAMPLE POST</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#mdo" style="color:#ffffff ; font-size: 12px ;font-weight: bold">CONTACT</a>
+            <a class="nav-link" href="" style="color:#ffffff ; font-size: 12px ;font-weight: bold">CONTACT</a>
           </li>
         </ul>
       </nav>
