--- a/task3.html
+++ b/task3.html
@@ -144,7 +144,7 @@
 
           <div class="col-md-4">
             <div class="logo1 rounded-circle ">
-              <a href="#">
+              <a href="https://twitter.com/login?lang=en">
                 <i class="fab fa-twitter fa-2x ">
               </a>
               </i>
@@ -152,14 +152,14 @@
           </div>
           <div class="col-md-4">
             <div class="logo1 rounded-circle ">
-              <a href="#">
+              <a href="https://www.facebook.com/">
                 <i class="fab fa-facebook-f fa-2x"></i>
               </a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="logo1 rounded-circle">
-              <a href="#"></a>
+              <a href="https://github.com/">
               <i class="fab fa-github fa-2x"></i>
               </a>
             </div>
@@ -167,9 +167,6 @@
 
         </div>
     </div>
-
-
-
 
     <p class="text-muted text-center" style="padding-top: 3%; font-size: 14px"> Copyright © Your Website 2018
 
