--- a/task3.html
+++ b/task3.html
@@ -36,7 +36,7 @@
             <a class="nav-link" href="https://fidabasheer.github.io/task3.html" style="color:#ffffff ; font-size: 12px ;font-weight: bold">SAMPLE POST</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="" style="color:#ffffff ; font-size: 12px ;font-weight: bold">CONTACT</a>
+            <a class="nav-link" href="https://akshaybititude.github.io/contact.html" style="color:#ffffff ; font-size: 12px ;font-weight: bold">CONTACT</a>
           </li>
         </ul>
       </nav>
@@ -116,9 +116,9 @@
           <i>
             To go places and do things that have never been done before – that’s what living is all about</p>
         </i>
-        <p>
-          Space, the final frontier. These are the voyages of the Starship Enterprise. Its five-year mission: to explore strange new
-          worlds, to seek out new life and new civilizations, to boldly go where no man has gone before.
+        <p>fidabasheer.github.io/task3.html
+          Space, the final frontier. These are the voyfidabasheer.github.io/task3.htmlages of the Starship Enterprise. Its five-year mission: to explore strange new
+          worlds, to seek out new life and new civilizfidabasheer.github.io/task3.htmlations, to boldly go where no man has gone before.
         </p>
         <p>
 
