--- a/task3.html
+++ b/task3.html
@@ -22,9 +22,13 @@
 <body>
   <div class="bg">
     <div class="container">
-      <nav class="navbar navbar-light">
+      <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#" style="color:#ffffff ;font-weight: 950; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Start Bootstrap</a>
-        <ul class="nav nav-pills ">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="https://aswinc97.github.io/aswin.html" style="color:#ffffff ; font-size: 12px ;font-weight: bold;">HOME</a>
           </li>
@@ -39,6 +43,7 @@
             <a class="nav-link" href="https://akshaybititude.github.io/contact.html" style="color:#ffffff ; font-size: 12px ;font-weight: bold">CONTACT</a>
           </li>
         </ul>
+        </div>
       </nav>
       <div class="row" style="padding-top: 12%">
         <div class="col-md-2"></div>
@@ -172,8 +177,6 @@
 
     </p>
     </footer>
-
-
 
 </body>
 
